Persist JWT token to disk

--- a/repo/sample-filehive.conf
+++ b/repo/sample-filehive.conf
@@ -8,6 +8,9 @@
 ; The directory to store log files
 ; logdir=~/.filehive/logs
 
+; The domain the server will run on
+; example.com
+
 ; The interface:port for the web server to bind to.
 ; 0.0.0.0:8080
 
