Update sample config

--- a/repo/sample-filehive.conf
+++ b/repo/sample-filehive.conf
@@ -8,11 +8,14 @@
 ; The directory to store log files
 ; logdir=~/.filehive/logs
 
+; A directory to use to save static files such as images to and server them from.
+; staticfiledir=~/.filehive/www
+
 ; The domain the server will run on
-; example.com
+; domain=example.com
 
 ; The interface:port for the web server to bind to.
-; 0.0.0.0:8080
+; listen=0.0.0.0:8080
 
 ; This is the db type. It can either be sqlite3, mysql, or postgress.
 ; dbdialect=mysql
