--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-select": "^3.1.1",
     "typeface-nunito-sans": "^1.1.13",
     "web-vitals": "^0.2.4"
   },
