--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
