--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "http-proxy-middleware": "^1.0.6",
+    "javascript-time-ago": "^2.3.4",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
