--- a/repo/sample-filehive.conf
+++ b/repo/sample-filehive.conf
@@ -28,3 +28,9 @@
 
 ; The password for the mysql or postgress db.
 ; dbpass=password
+
+; The admin token for Powergate
+; powergatetoken=
+
+; The Filecoin address for payouts
+; filecoinaddress=
