--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "html-entities": "^2.1.0",
     "http-proxy-middleware": "^1.0.6",
     "javascript-time-ago": "^2.3.4",
     "qrcode.react": "^1.0.1",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-react-app": "^6.0.0"
+    "eslint-config-react-app": "^6.0.0",
+    "react-markdown": "^5.0.3"
   }
 }
