--- a/web/package.json
+++ b/web/package.json
@@ -15,9 +15,11 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
+    "react-pluralize": "^1.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-select": "^3.1.1",
+    "swr": "^0.4.1",
     "typeface-nunito-sans": "^1.1.13",
     "web-vitals": "^0.2.4"
   },
