Update for powergate tokens and add Mailgun config variable
Fixes #8

--- a/repo/sample-filehive.conf
+++ b/repo/sample-filehive.conf
@@ -34,3 +34,9 @@
 
 ; The Filecoin address for payouts
 ; filecoinaddress=
+
+; Powergate hostname
+; powergate=127.0.0.1:5002
+
+; Mailgun API Key
+; mailgun=
