--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-modal": "^3.12.1",
     "react-pluralize": "^1.6.3",
     "react-router-dom": "^5.2.0",
