--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-select": "^3.1.1",
+    "react-super-responsive-table": "^5.2.0",
     "swr": "^0.4.1",
     "typeface-nunito-sans": "^1.1.13",
     "web-vitals": "^0.2.4"
